# data-ignition

./: .gitignore  README.md  agent_config.json  analysis.py  approach_summary.md  medal_report.py  olympics.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/: README.md  medal_report.py
tests/: conftest.py  test_chart.py  test_clean_medals.py  test_dedup.py  test_integration.py  test_leaderboard.py  test_load_data.py  test_normalization.py  test_reconciliation.py
