[project]
name = "medal-report"
version = "1.0.0"
description = "Olympic Medal Leaderboard Reporter — corrected analytics tool"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.2.2",
    "matplotlib==3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "ruff==0.11.12",
    "bandit==1.9.0",
    "mypy==1.16.0",
    "pandas-stubs==2.2.3.241126",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "S",     # flake8-bandit (security)
    "T20",   # flake8-print (print statements)
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # Ruff-specific rules
]
ignore = [
    "T201",  # Allow print() in this CLI tool
    "S101",  # Allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["matplotlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=medal_report --cov-report=term-missing --cov-branch -v"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert is fine in non-test code for this tool

[tool.coverage.run]
source = ["medal_report"]
branch = true

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
]
